dental_practice実装
